# midi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  aclient.c  chordify.cpp  microGranny.cpp  midi.config  raspbian.make  template.service
lib/: CMakeLists.txt
lib/include/: midi.hpp
root/etc/: fstab  inetd.conf  inittab  services
root/etc/init.d/: rc.local  rcS
root/etc/systemd/system/: acid8-forward.service  blofeld-forward.service  microGranny.service
scripts/: bundle.sh  microGranny  piano-randomizer  scale-randomizer
src/: CMakeLists.txt  Makefile  aclient.c  chordify.cpp  debug.hpp  forward.c  forward.cpp  menu.c  microGranny.c  microGranny.cpp  midi.c  midi.cpp  midi.hpp  spazer.c  unlegato.cpp
src/lib/: midi.cpp
src/lib/include/: debug.hpp  midi.hpp
